<resources>
    <string name="app_name">Thots</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sign_in">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="settings">Settings</string>


    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>

    <string name="info_image_user">User profile image</string>
    <string name="info_message_error_network">Please check you internet connection</string>
    <string name="info_message_auth_failed">Authentication failed.</string>
    <string name="info_message_create_account_failed">Creation account failed.</string>
    <string name="info_message_create_account_success">Creation account Success.</string>
    <string name="info_no_user_nearby">No users nearby.</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="info_msg_send_success">Sent Successfully</string>
    <string name="info_msg_send_error">Error Msg not Sent</string>
    <string name="info_msg_empty">Msg Empty</string>

    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>

    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <string name="geofence_transition_notification_text">Click notification to return to app</string>
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>
    <string name="appwidget_text">List messages</string>
    <string name="add_widget">Add widget</string>
    <string name="no_msgs">No messages</string>
    <string name="user_info">Info</string>
    <string name="user_job">Job:</string>
    <string name="user_age">Age:</string>
    <string name="user_phone">Phone:</string>
    <string name="message">Message</string>


</resources>
